# Haskell-terminal

./: App.hs  GeneralizedMultiTableUI_WithMaxWidth.hs  README.md  cabal.project  dashboard.cabal  tables.json
.github/workflows/: haskell.yml
